--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python = "^3.9"
 griptape-core = ">= 0.7.2"
 python-dotenv = ">=0.21"
 openai = ">=0.27"
+cohere = ">=4"
 attrs = ">=22"
 jinja2 = ">=3.1"
 jsonschema = ">=4"
