--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ graphlib = "*"
 tiktoken = ">=0.3"
 rich = ">=13"
 stopit = "*"
+transformers = ">= 4"
 
 [tool.poetry.group.test.dependencies]
 griptape-tools = ">= 0.6.0"
